--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<!--
-Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Html.html to edit this template
--->
-<html>
+<html lang="es">
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mi Jardin - Inicio</title>
+        <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="./estilo/style.css">
     </head>
-    <body>
-        <div>TODO write content crud</div>
+    <body class="bg-success">
+
+        <div id="wraper">
+            <div class="card text-center bg-verde">
+                <div class="card-header fs-1 fw-bold">
+                    Bienvenid@ a Mi Jardin!
+                </div>
+                <div class="card-body">   
+                    <i class="fa fa-pagelines fs-5" aria-hidden="true"></i>
+                    <h5 class="card-title">Consulta nuestra base de datos de plantas</h5>
+                    <p class="card-text">Entra en Tu jardín y añade las nuevas plantas.</p>
+                    <a class="btn btn-success" href="/MiJardin/EjercicioCrudMiJardin/buscador.jsp" >Consultar</a>
+                    <a class="btn btn-success" href="/MiJardin/EjercicioCrudMiJardin/login.jsp" role="button">Entrar</a>
+                </div> 
+            </div>
+        </div>
+        <div id="fondo" class="bg">
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+        <script src="./js/js.js"></script>
     </body>
 </html>
