--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mi Jardin - Inicio</title>
-        <link rel="shortcut icon" href="./imagenes/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="./imagenes/iconoflor.png" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -22,8 +22,8 @@
                     <i class="fa fa-pagelines fs-5" aria-hidden="true"></i>
                     <h5 class="card-title">Consulta nuestra base de datos de plantas</h5>
                     <p class="card-text">Entra en Tu jardín y añade las nuevas plantas.</p>
-                    <a class="btn btn-success" href="/MiJardin/EjercicioCrudMiJardin/buscador.jsp" >Consultar</a>
-                    <a class="btn btn-success" href="/MiJardin/EjercicioCrudMiJardin/login.jsp" role="button">Entrar</a>
+                     <a class="btn-lg btn-warning" href="/MiJardin/EjercicioCrudMiJardin/login.jsp">Entrar</a>
+                    <a class="btn-lg btn-warning" href="/MiJardin/EjercicioCrudMiJardin/buscador.jsp" >Consultar</a>
                 </div> 
             </div>
         </div>
